# setu-mcps

./: .gitignore  LICENSE  README.md
kyc/: README.md  pyproject.toml
kyc/src/kyc/: server.py
setu-kyc/: README.md  pyproject.toml
setu-kyc/src/kyc/: server.py
upi-deeplinks/: README.md  pyproject.toml
upi-deeplinks/src/upi_deeplinks/: server.py
